# cookiecutter-nanobind-github

./: README.rst  cookiecutter.json  index.html
{{ cookiecutter.project_name }}/: .readthedocs.yaml  CMakeLists.txt  README.rst  pyproject.toml  tox.ini
{{ cookiecutter.project_name }}/.github/workflows/: tox.yml
{{ cookiecutter.project_name }}/doc/source/: api.rst  conf.py  index.rst
{{ cookiecutter.project_name }}/src/: {{cookiecutter.project_slug}}.cpp
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_slug}}/: __init__.py
{{ cookiecutter.project_name }}/tests/: test_{{cookiecutter.project_slug}}.py
